[package]
name = "bevy_pigeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["bevy_dylib"] }
carrier-pigeon = { git = "https://github.com/mitchellmarinodev/carrier-pigeon", rev = "e4216576b67685153b3b058920c6bf0498687632" }
bevy-pigeon = { git = "https://github.com/mitchellmarinodev/bevy-pigeon", rev = "1aa29c6c77647c9879cf501f9f1455ef1b20d445" }
serde = { version = "~1.0", features = ["derive"] }
heron = { version = "3.0", features = ["2d"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }

[profile.dev.package."*"]
opt-level = 3
