[package]
name = "bong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
carrier-pigeon = { git = "https://github.com/mitchellmarinodev/carrier-pigeon" }
bevy-pigeon = { git = "https://github.com/mitchellmarinodev/bevy-pigeon" }
rand = "~0.7"
serde = { version = "~1.0", features = ["derive"] }
heron = { version = "3.0", features = ["2d"] }

[profile.dev.package."*"]
opt-level = 3
